--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root{
+  --primary: #f6f7eb;
+  --accent: #e07a5f;
+  --accent_dark: #d36547;
+  --bkg: #f4f1de;
+  --text_color:#3d405b;
+  --secondary_text_color:#cfd0d9;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +14,108 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--text_color);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a{
+  color: var(--secondary_text_color);
+}
+
+.my-form{
+  border: 4px solid var(--accent);
+  border-radius: 12px;
+  width: fit-content;
+  min-width: 300px;
+  max-width: 80%;
+  padding: 10px;
+  margin: 0 auto;
+  color: var(--text_color);
+  background-color: var(--bkg);
+}
+
+.my-form .header{
+  width: 100%;
+  text-align: center;
+}
+.my-form .footer{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.my-list{
+  list-style: none;
+  margin: 10px;
+  padding: 0;
+}
+
+.my-list li{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 0 10px;
+  margin-bottom: 20px;
+}
+
+.my-list li .input_label{
+  margin-bottom: 10px;
+  margin-top: 0;
+  font-weight: 600;
+}
+
+.my-btn{
+  padding: 10px 15px;
+  border-radius: 8px;
+  margin: 10px;
+  border: none;
+  color: var(--text_color);
+  background-color: var(--accent);
+  font-weight: 900;
+  transition: 800ms;
+  color: var(--bkg);
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.my-btn:disabled{
+  filter: opacity(0.5);
+  pointer-events: none;
+}
+
+.my-select{
+  width: calc(100% - 10%);
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid var(--text_color);
+  /* border-radius: 8px; */
+  padding: 5px 0px;
+  align-content: var(--accent);
+  font-weight: 400;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+input{
+  background-color: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 2px solid var(--text_color);
+  width: calc(100% - 10%);
+  font-size: 14px;
+}
+
+@media (hover: hover){
+  .my-btn:hover{
+    background-color: var(--accent_dark);
+  }
+
+  .my-select:focus,input:focus{
+    outline:none;
+    border-bottom-color: var(--accent);
+  }
 }
