--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--text_color);
 }
 
 code {
@@ -22,20 +21,27 @@ code {
     monospace;
 }
 
-a{
+body:has(.my-form){
+  background-color: var(--text_color);
+}
+
+body:has(.my-form) a{
   color: var(--secondary_text_color);
 }
 
 .my-form{
   border: 4px solid var(--accent);
-  border-radius: 12px;
+  border-radius: 16px;
   width: fit-content;
   min-width: 300px;
   max-width: 80%;
   padding: 10px;
-  margin: 0 auto;
   color: var(--text_color);
   background-color: var(--bkg);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .my-form .header{
@@ -92,7 +98,6 @@ a{
   background-color: transparent;
   border: none;
   border-bottom: 2px solid var(--text_color);
-  /* border-radius: 8px; */
   padding: 5px 0px;
   align-content: var(--accent);
   font-weight: 400;
@@ -100,7 +105,7 @@ a{
   cursor: pointer;
 }
 
-input{
+.my-form input{
   background-color: transparent;
   border: none;
   outline: none;
@@ -109,12 +114,16 @@ input{
   font-size: 14px;
 }
 
+.my-form input[type="date"]::-webkit-calendar-picker-indicator {
+  color: var(--text_color);
+}
+
 @media (hover: hover){
   .my-btn:hover{
     background-color: var(--accent_dark);
   }
 
-  .my-select:focus,input:focus{
+  .my-select:focus,.my-from input:focus{
     outline:none;
     border-bottom-color: var(--accent);
   }
